commit 96  - 상품 이미지 등록의 경우 이미지 파일만 가능하도록 처리  - file.js script.html로 이동  - listwithDeleteYnAndFileState 메소드 deleteYn, FileStat값 하드코딩에서 직접 받아오도록 처리

--- a/src/main/resources/templates/fragments/script.html
+++ b/src/main/resources/templates/fragments/script.html
@@ -5,4 +5,5 @@
     <script th:src="@{'/assets/js/feather/feather.js'}"></script>
     <script th:src="@{'/assets/js/ckeditor/ckeditor-37.0.1.js'}"></script>
     <script th:src="@{'/assets/js/ckeditor/MyUploadAdapter.js'}"></script>
+    <script th:src="@{'/assets/js/core/file.js'}"></script>
 </th:block>
